click for result text hover effect on mobile fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -341,6 +341,13 @@
     border: solid #262626 7px;
   }
 
+  .click-for-result:hover {
+    top: 45%;
+    font-size: 4.1vw;
+    width: 75%;
+    border: solid #262626 7px;
+  }
+
   .results-page {
     margin-left: 4%;
     margin-right: 4%;
